# nova

./: .gitignore  CODE_OF_CONDUCT.md  COMPONENTS.md  CONTRIBUTING.md  DECISIONS.md  FIRST_ISSUES.md  FOUNDATION.md  GOVERNANCE.md  LICENSE-MIT  README.md  ROADMAP.md
.agents/: ACCOUNTABILITY.md  ARCHITECTURE.md  EVOLUTION.md  MISSION.md  README.md  coordinator.sh  run.sh  status.json
.agents/agents/: architect.md  docs.md  implementer.md  perf.md  refactor.md  release.md  reviewer.md  security.md  tester.md
.agents/evolution/: lineage.json
.agents/examples/: result-implement-lexer.json  review-feedback.json  task-implement-lexer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  work_item.md
.github/workflows/: ci.yml
bootstrap/: Cargo.toml  FIRST_ISSUES.md  README.md  SPAN_SECURITY_REPORT.md
bootstrap/src/: ast.rs  codegen.rs  error.rs  ir.rs  lexer.rs  lexer_attack.rs  main.rs  parser.rs  parser_attack.rs  span.rs  span_attack.rs  token.rs  token_attack.rs  types.rs
docs/: BRAND.md  DIAGRAMS.md  TDD.md  WHY-NOVA.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/architecture/: codegen.html  errors.html  lexer.html  parser.html  types.html
docs/brand/: BRAND.md
docs/faq/: index.html
docs/learn/: codegen.html  compiler-basics.html  index.html  lexers-tokens.html  parsers-ast.html  roadmap.html  type-systems.html  verification.html  (+1 more)
examples/: fibonacci.nova  hello.nova
scripts/: setup-github.sh  setup-hooks.sh  test-all.sh
spec/: syntax.md
(+9 files in other folders)
